<resources>
    <string name="app_name">Liga da Justiça</string>
    <string name="btnBatman">Batman</string>
    <string name="btnMulMara">Mulher Maravilha</string>
    <string name="btnSuperMan">Superman</string>
    <string name="btnFlash">Flash</string>
    <string name="txtTextApres">Bem-vindo ao apicativo da Liga da Justiça</string>
    <string name="txtTextApres2">Escolha um herói e veja suas informações</string>
    <string name="txtTitleBatman">BATMAN</string>
    <string name="txtTitleSuperman">SUPERMAN</string>
    <string name="txtTitleMulMara">MULHER MARAVILHA</string>
    <string name="txtTitleFlash">FLASH</string>
    <string name="txtNo">Nome:</string>
    <string name="txtCodi">Codinome: </string>
    <string name="txtEsp">Especie: </string>
    <string name="txtHabi">Habilidades: </string>
    <string name="txtVul">Vulnerabilidades: </string>
    <string name="txtNoBat"> Bruce Wayne</string>
    <string name="txtCodiBat">Batman </string>
    <string name="txtEspBat"> Humano </string>
    <string name="txtHabiBat"> inteligência, mestre em artes marciais e riqueza </string>
    <string name="txtVulBat"> Traumas de seu passado e o fato de ser humano </string>
    <string name="txtNoMM"> Diana Prince</string>
    <string name="txtCodiMM"> Mulher Maravilha </string>
    <string name="txtEspMM"> Humano/Amazona </string>
    <string name="txtHabiMM"> Super-força, Fator de Cura </string>
    <string name="txtVulMM"> Ataques místicos </string>
    <string name="txtNoSM"> Clark Kent </string>
    <string name="txtCodiSM"> Superman </string>
    <string name="txtEspSM"> Alienígena </string>
    <string name="txtHabiSM"> Super força, super resistência </string>
    <string name="txtVulSM"> Kriptonita, sol vermelho </string>
    <string name="txtNoF"> Barry Allen </string>
    <string name="txtCodiF"> Flash </string>
    <string name="txtEspF"> Humano </string>
    <string name="txtHabiF"> Super velocidade, intangível </string>
    <string name="txtVulF"> Ficar preso entres dimensões </string>
    <string name="txtSaberM">Saiba mais sobre outros personagens</string>
    <string name="btnSaibaMais">Saiba Mais</string>
</resources>
