<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ActivityBatman">

    <ImageView
        android:id="@+id/imgIcBatman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/ic_batman" />

    <TextView
        android:id="@+id/txtTitleBatman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitleBatman"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIcBatman"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/txtNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNo"
        app:layout_constraintBottom_toTopOf="@+id/txtNo"
        app:layout_constraintEnd_toStartOf="@+id/txtNomeBat"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleBatman"
        app:layout_constraintVertical_bias="0.661" />

    <TextView
        android:id="@+id/txtNomeBat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNoBat"
        app:layout_constraintBottom_toTopOf="@+id/txtCodiBat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleBatman"
        app:layout_constraintVertical_bias="0.661" />

    <TextView
        android:id="@+id/txtNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/txtCodi"
        app:layout_constraintEnd_toStartOf="@+id/txtCodiBat"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleBatman" />

    <TextView
        android:id="@+id/txtCodiBat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/txtCodiBat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleBatman" />

    <TextView
        android:id="@+id/txtEsp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/txtEsp"
        app:layout_constraintBottom_toTopOf="@+id/txtHabi"
        app:layout_constraintEnd_toStartOf="@+id/txtEspecieBat"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNo"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/txtEspecieBat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/txtEspBat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleBatman" />

    <TextView
        android:id="@+id/txtHabi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtHabi"
        app:layout_constraintBottom_toTopOf="@+id/txtVul"
        app:layout_constraintEnd_toStartOf="@+id/txtHabiBat"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNo" />

    <TextView
        android:id="@+id/txtHabiBat"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtHabiBat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEspecieBat" />

    <TextView
        android:id="@+id/txtVul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginBottom="184dp"
        android:text="@string/txtVul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="162dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/txtVulBat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtVul"
        app:layout_constraintTop_toBottomOf="@+id/txtHabiBat"
        app:layout_constraintVertical_bias="0.125" />

</androidx.constraintlayout.widget.ConstraintLayout>