<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnBatman"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:text="@string/btnBatman"
        app:layout_constraintBottom_toTopOf="@+id/btnSuperMan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <Button
        android:id="@+id/btnMulMara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMulMara"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSuperMan"
        android:layout_width="163dp"
        android:layout_height="47dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnSuperMan"
        app:layout_constraintBottom_toTopOf="@+id/btnMulMara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnFlash"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:text="@string/btnFlash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMulMara"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/txtTextApres"
        android:layout_width="393dp"
        android:layout_height="43dp"
        android:text="@string/txtTextApres"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBatman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTextApres2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTextApres2"
        app:layout_constraintBottom_toTopOf="@+id/btnBatman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTextApres"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/txtSaberM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSaberM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFlash"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/btnSaberMais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSaibaMais"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaberM"
        app:layout_constraintVertical_bias="0.181" />
</androidx.constraintlayout.widget.ConstraintLayout>